After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770353 - file-operations: fix crash on compression error
file-operations: fix crash on compression error
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-08-24 21:11 UTC by Razvan Chitu
Modified: 2016-08-24 21:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
file-operations: fix crash on compression error (1.11 KB, patch)
2016-08-24 21:11 UTC, Razvan Chitu
committed Details | Review

Description Razvan Chitu 2016-08-24 21:11:39 UTC
See patch.
Comment 1 Razvan Chitu 2016-08-24 21:11:44 UTC
Created attachment 334101 [details] [review]
file-operations: fix crash on compression error

One of the error dialog strings was statically allocated, but the dialog
function attempts to free it. In order to fix this, newly allocate a copy of the
string.
Comment 2 Carlos Soriano 2016-08-24 21:12:39 UTC
Review of attachment 334101 [details] [review]:

oh yes, thanks!
Comment 3 Razvan Chitu 2016-08-24 21:15:14 UTC
Attachment 334101 [details] pushed as 2a908cc - file-operations: fix crash on compression error