file-operations: fix crash on compression error

One of the error dialog strings was statically allocated, but the dialog
function attempts to free it. In order to fix this, newly allocate a copy of the
string.

https://bugzilla.gnome.org/show_bug.cgi?id=770353